--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-
+<!DOCTYPE html>
+<title> MY OWN WEB </title>
+<head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</head>
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 text-center">
+        <h2> Shopping store </h2>
+        <hr class="hr" />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4 text-center">
+        <label id="product1"> sandals </label>
+        <img src="images (5).jpeg" style="width:400px; heigh:500px;" class="img-thumbnail"/><br>
+        <label for="product1" id="price1">200</label>
+        <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
+      </div>
+      <div class="col-4 text-center">
+        <label id="product2"> sandals </label>
+        <img src="FashionCrystal2.jpg" style="width:400px; height:500px;" class="img-thumbnail"/><br>
+        <label for="product2" id="price2">200</label>
+        <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
+      </div>
+      <div class="col-4 text-center">
+        <label id="product3"> sandals </label>
+        <img src="BitaSandals3.jpg" style="width:400px; height:500px;" class="img-thumbnail"/><br>
+        <label for="product3" id="price2">200</label>
+        <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
+      </div>
+      <div class="col-4 text-center">
+        <label id="product4"> sandals </label>
+        <img src="HighLeggedBoots4.jpg" style="width:400px; height:500px;" class="img-thumbnail"/><br>
+        <label for="product4" id="price2">200</label>
+        <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
+      </div>
+      <div class="col-4 text-center">
+        <label id="product5"> sandals </label>
+        <img src="HeelsHotMules5.jpg" style="width:400px; height:500px;" class="img-thumbnail"/><br>
+        <label for="product5" id="price2">200</label>
+        <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
+      </div>
+      <div class="col-4 text-center">
+        <label id="product6"> sandals </label>
+        <img src="HighHeels6.jpg" style="width:400px; height:500px;" class="img-thumbnail"/><br>
+        <label for="product6" id="price2">200</label>
+        <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
+      </div>
+      <div class="col-4">
+        <label for="carts"> Orders </label><br>
+        <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width:400px; height:500; font-size:12px;"></textarea>
+        <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/>
+        <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/>
+        <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
+      </div>
+    </div>
+  </div>
+  <script src="app.js"></script>
+</body>
+</html>
