--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
-                <h2> MOTOR SHOP </h2>
-                <p>By Ronnel Nitoya</p>
+                <h2> NBA JERSEY'S </h2>
+                <p>By Jericho</p>
                 <hr class="hr" />
             </div>
         </div>
         <div class="row">
             <!-- Product 1 -->
             <div class="col-4 text-center">
-                <label id="product1">Lebron James Jersey</label>   
+                <label id="product1">Lebron James Jersey </label>   
                 <img src="images (12).jpeg" style="width:200px;height:250px;" class="img-thumbnail"/><br>
-                <label for="product1" id="price1">150000.00</label>
+                <label for="product1" id="price1">5000.00</label>
                 <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 2 -->
             <div class="col-4 text-center">
-                <label id="product2">Kyrie Irving Jersey</label>   
+                <label id="product2">Kyrie Irving Jersey </label>   
                 <img src="images (9)." style="width:200px;height:250px;" class="img-thumbnail"/><br>
-                <label for="product2" id="price2">70000.00</label>
+                <label for="product2" id="price2">4000.00</label>
                 <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 3 -->
             <div class="col-4 text-center">
-                <label id="product3">YAMAHA AEROX </label>   
+                <label id="product3">James Harden Jersey </label>   
                 <img src="aerox.png" style="width:200px;height:250px;" class="img-thumbnail"/><br>
-                <label for="product3" id="price3">150000.00</label>
+                <label for="product3" id="price3">3500.00</label>
                 <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
             </div>
         </div>
