--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- Product 3 -->
             <div class="col-4 text-center">
                 <label id="product3">James Harden Jersey </label>   
-                <img src="aerox.png" style="width:200px;height:250px;" class="img-thumbnail"/><br>
+                <img src="images (8)." style="width:200px;height:250px;" class="img-thumbnail"/><br>
                 <label for="product3" id="price3">3500.00</label>
                 <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
             </div>
@@ -41,15 +41,15 @@
         <div class="row">
             <!-- Product 4 -->
             <div class="col-4 text-center">
-                <label id="product4">YAMAHA MIO GEAR</label>   
-                <img src="mio.png" style="width:200px;height:250px;" class="img-thumbnail"/><br>
+                <label id="product4">Michael Jordan Jersey</label>   
+                <img src="images (7)." style="width:200px;height:250px;" class="img-thumbnail"/><br>
                 <label for="product4" id="price4">90000.00</label>
                 <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 5 -->
             <div class="col-4 text-center">
-                <label id="product5">SUZUKI RAIDER150</label>   
-                <img src="raider.png" style="width:200px;height:250px;" class="img-thumbnail"/><br>
+                <label id="product5">Kobe Bryant Jersey</label>   
+                <img src="images (11)." style="width:200px;height:250px;" class="img-thumbnail"/><br>
                 <label for="product5" id="price5">100000.00</label>
                 <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
             </div>
