--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
             <div class="col-4 text-center">
                 <label id="product4">Michael Jordan Jersey</label>   
                 <img src="images (7)." style="width:200px;height:250px;" class="img-thumbnail"/><br>
-                <label for="product4" id="price4">90000.00</label>
+                <label for="product4" id="price4">8000.00</label>
                 <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 5 -->
             <div class="col-4 text-center">
                 <label id="product5">Kobe Bryant Jersey</label>   
                 <img src="images (11)." style="width:200px;height:250px;" class="img-thumbnail"/><br>
-                <label for="product5" id="price5">100000.00</label>
+                <label for="product5" id="price5">7000.00</label>
                 <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 6 -->
             <div class="col-4 text-center">
-                <label id="product6">SUZUKI SMASH FI</label>   
-                <img src="smash.png" style="width:200px;height:250px;" class="img-thumbnail"/><br>
-                <label for="product6" id="price6">90000.00</label>
+                <label id="product6">Allen Iverson Jersey</label>   
+                <img src="images (10)." style="width:200px;height:250px;" class="img-thumbnail"/><br>
+                <label for="product6" id="price6">4000.00</label>
                 <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
             </div>
         </div>
