--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
             <!-- Product 2 -->
             <div class="col-4 text-center">
                 <label id="product2">Kyrie Irving Jersey </label>   
-                <img src="images (9)." style="width:200px;height:250px;" class="img-thumbnail"/><br>
+                <img src="images (9).jpeg" style="width:200px;height:250px;" class="img-thumbnail"/><br>
                 <label for="product2" id="price2">4000.00</label>
                 <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 3 -->
             <div class="col-4 text-center">
                 <label id="product3">James Harden Jersey </label>   
-                <img src="images (8)." style="width:200px;height:250px;" class="img-thumbnail"/><br>
+                <img src="images (8).jpeg" style="width:200px;height:250px;" class="img-thumbnail"/><br>
                 <label for="product3" id="price3">3500.00</label>
                 <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
             </div>
@@ -42,21 +42,21 @@
             <!-- Product 4 -->
             <div class="col-4 text-center">
                 <label id="product4">Michael Jordan Jersey</label>   
-                <img src="images (7)." style="width:200px;height:250px;" class="img-thumbnail"/><br>
+                <img src="images (7).jpeg" style="width:200px;height:250px;" class="img-thumbnail"/><br>
                 <label for="product4" id="price4">8000.00</label>
                 <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 5 -->
             <div class="col-4 text-center">
                 <label id="product5">Kobe Bryant Jersey</label>   
-                <img src="images (11)." style="width:200px;height:250px;" class="img-thumbnail"/><br>
+                <img src="images (11).jpeg" style="width:200px;height:250px;" class="img-thumbnail"/><br>
                 <label for="product5" id="price5">7000.00</label>
                 <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
             </div>
             <!-- Product 6 -->
             <div class="col-4 text-center">
                 <label id="product6">Allen Iverson Jersey</label>   
-                <img src="images (10)." style="width:200px;height:250px;" class="img-thumbnail"/><br>
+                <img src="images (10).jpeg" style="width:200px;height:250px;" class="img-thumbnail"/><br>
                 <label for="product6" id="price6">4000.00</label>
                 <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
             </div>
