--- a/index.html
+++ b/index.html
@@ -1,1 +1,117 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AT Cellphone Store</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+        .container {
+            margin-top: 20px;
+        }
+        .header {
+            text-align: center;
+            background-color: #28a745; /* Green background */
+            color: white;
+            padding: 20px 0;
+            position: relative;
+            overflow: hidden;
+        }
+        .header h2 {
+            margin: 0;
+            font-size: 2.5em;
+            background-color: #007bff; /* Blue background for text */
+            display: inline-block;
+            padding: 0 20px;
+            animation: slideIn 5s linear infinite;
+        }
+        @keyframes slideIn {
+            0% {
+                transform: translateX(100%);
+            }
+            100% {
+                transform: translateX(-100%);
+            }
+        }
+        .product {
+            background-color: #ffffff;
+            border: 1px solid #dee2e6;
+            border-radius: 5px;
+            padding: 15px;
+            margin-bottom: 20px;
+            transition: transform 0.2s, background-color 0.2s;
+        }
+        .product:hover {
+            transform: scale(1.05);
+            background-color: #f0f0f0;
+        }
+        .product img {
+            max-width: 100%;
+            height: auto;
+        }
+        .orders {
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <h2>AT Cellphone Store</h2>
+            <hr class="hr">
+        </div>
+        <div class="row">
+            <div class="col-md-4 text-center product">
+                <label id="product1">Samsung S21</label>   
+                <img src="images/s21.png" class="img-thumbnail"><br>
+                <label for="product1" id="price1">27000.00</label>
+                <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"><br>
+            </div>
+            <div class="col-md-4 text-center product">
+                <label id="product2">Samsung S22</label>   
+                <img src="images/s22.png" class="img-thumbnail"><br>
+                <label for="product2" id="price2">37000.00</label>
+                <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"><br>
+            </div>
+            <div class="col-md-4 text-center product">
+                <label id="product3">Samsung S23</label>   
+                <img src="images/s23.png" class="img-thumbnail"><br>
+                <label for="product3" id="price3">47000.00</label>
+                <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"><br>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 text-center product">
+                <label id="product4">Samsung S24</label>   
+                <img src="images/s24.png" class="img-thumbnail"><br>
+                <label for="product4" id="price4">57000.00</label>
+                <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"><br>
+            </div>
+            <div class="col-md-4 text-center product">
+                <label id="product5">Samsung S25</label>   
+                <img src="images/s25.png" class="img-thumbnail"><br>
+                <label for="product5" id="price5">67000.00</label>
+                <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"><br>
+            </div>
+            <div class="col-md-4 text-center product">
+                <label id="product6">Samsung S26</label>   
+                <img src="images/s26.png" class="img-thumbnail"><br>
+                <label for="product6" id="price6">77000.00</label>
+                <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"><br>
+            </div>
+        </div>
+        <div class="row orders">
+            <div class="col-md-12">
+                <label for="carts">Orders</label><br>
+                <textarea class="form-control" rows="10" id="carts" cols="200" readonly style="width:100%;font-size:12px;"></textarea>
+                <input type="number" class="form-control" id="cash" placeholder="Cash Tendered">
+                <input type="text" class="form-control border-0" id="change" readonly placeholder="Change">
+            </div>
+        </div>
+    </div>
+    <script src="app.js"></script>
+</body>
+</html>
