--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
             </div>
             <div class="col-md-4 text-center product">
                 <label id="product2">Bryant Jersey</label>   
-                <img src="kobe.png.png" class="img-thumbnail"><br>
+                <img src="kobe.png" class="img-thumbnail"><br>
                 <label for="product2" id="price2">37000.00</label>
                 <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"><br>
             </div>
             <div class="col-md-4 text-center product">
                 <label id="product3">Iverson Jersey</label>   
-                <img src="iverson.png.png" class="img-thumbnail"><br>
+                <img src="iverson.png" class="img-thumbnail"><br>
                 <label for="product3" id="price3">47000.00</label>
                 <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"><br>
             </div>
@@ -96,20 +96,20 @@
         <div class="row">
             <div class="col-md-4 text-center product">
                 <label id="product4">Irving Jersey</label>   
-                <img src="irving.png.png" class="img-thumbnail"><br>
+                <img src="irving.png" class="img-thumbnail"><br>
                 <label for="product4" id="price4">57000.00</label>
                 <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"><br>
             </div>
             <div class="col-md-4 text-center product">
                 <label id="product5">Harden Jersey</label>   
-                <img src="harden.png.png" class="img-thumbnail"><br>
+                <img src="harden.png" class="img-thumbnail"><br>
                 <label for="product5" id="price5">67000.00</label>
                 <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"><br>
             </div>
             <div class="col-md-4 text-center product">
                 <label id="product6">Jordan Jersey</label>   
-                <img src="images/s26.png" class="img-thumbnail"><br>
-                <label for="jordan.png" id="price6">77000.00</label>
+                <img src="jordan.png" class="img-thumbnail"><br>
+                <label for="product6" id="price6">77000.00</label>
                 <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"><br>
             </div>
         </div>
