--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
         }
         .row {
             display: flex;
+            flex-wrap: wrap;
         }
         .col-md-4 {
             display: flex;
+            align-items: stretch;
         }
     </style>
 </head>
@@ -146,3 +148,5 @@
     <script src="app.js"></script>
 </body>
 </html>
+        
+ 
