--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AT Cellphone Store</title>
+    <title> My Homepage </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
@@ -81,7 +81,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h2>AT Cellphone Store</h2>
+            <h2>Jersey Shop</h2>
+             <p>By Jericho Dela Cruz</p>
             <hr class="hr">
             </div>
             <div class="row">
