--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            height: 100%;
+            height: 100%; /* Ensure equal height */
+            max-height: 400px; /* Set a maximum height to avoid overly large sections */
         }
         .product:hover {
             transform: scale(1.05);
@@ -60,10 +61,12 @@
         .product label {
             font-weight: bold;
             font-size: 1.2em;
+            margin-top: 10px;
         }
         .product input {
             width: 80%;
             margin: 0 auto;
+            margin-top: 10px;
         }
         .orders {
             margin-top: 20px;
@@ -82,10 +85,10 @@
     <div class="container">
         <div class="header">
             <h2>Jersey Shop</h2>
-             <p>By Jericho Dela Cruz</p>
+            <p>By Jericho Dela Cruz</p>
             <hr class="hr">
-            </div>
-            <div class="row">
+        </div>
+        <div class="row">
             <div class="col-md-4">
                 <div class="product">
                     <label for="product1">James Jersey</label>   
