--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="product flex-fill">
                     <label for="product1">James Jersey</label>   
                     <img src="james.png" class="img-thumbnail">
-                    <label for="price1">Price: ₱27,000.00</label>
+                    <label for="price1">27000.00</label>
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity">
                 </div>
             </div>
@@ -92,7 +92,7 @@
                 <div class="product flex-fill">
                     <label for="product2">Bryant Jersey</label>   
                     <img src="kobe.png" class="img-thumbnail">
-                    <label for="price2">Price: ₱37,000.00</label>
+                    <label for="price2">37000.00</label>
                     <input type="number" class="form-control" id="qty2" placeholder="Enter quantity">
                 </div>
             </div>
@@ -100,7 +100,7 @@
                 <div class="product flex-fill">
                     <label for="product3">Iverson Jersey</label>   
                     <img src="iverson.png" class="img-thumbnail">
-                    <label for="price3">Price: ₱47,000.00</label>
+                    <label for="price3">47000.00</label>
                     <input type="number" class="form-control" id="qty3" placeholder="Enter quantity">
                 </div>
             </div>
@@ -110,7 +110,7 @@
                 <div class="product flex-fill">
                     <label for="product4">Irving Jersey</label>   
                     <img src="irving.png" class="img-thumbnail">
-                    <label for="price4">Price: ₱57,000.00</label>
+                    <label for="price4">57000.00</label>
                     <input type="number" class="form-control" id="qty4" placeholder="Enter quantity">
                 </div>
             </div>
@@ -118,7 +118,7 @@
                 <div class="product flex-fill">
                     <label for="product5">Harden Jersey</label>   
                     <img src="harden.png" class="img-thumbnail">
-                    <label for="price5">Price: ₱67,000.00</label>
+                    <label for="price5">67000.00</label>
                     <input type="number" class="form-control" id="qty5" placeholder="Enter quantity">
                 </div>
             </div>
@@ -126,7 +126,10 @@
                 <div class="product flex-fill">
                     <label for="product6">Jordan Jersey</label>   
                     <img src="jordan.png" class="img-thumbnail">
-                    <label for="price6">Price: ₱77,000.00</label>
+                     <ul class="d-flex">
+                <p> Php </p>
+                <label  id="price6">25000.00</label><br>
+                </ul>
                     <input type="number" class="form-control" id="qty6" placeholder="Enter quantity">
                 </div>
             </div>
