--- a/index.html
+++ b/index.html
@@ -126,10 +126,7 @@
                 <div class="product flex-fill">
                     <label for="product6">Jordan Jersey</label>   
                     <img src="jordan.png" class="img-thumbnail">
-                    <ul class="d-flex">
-                            <p> Php </p>
-                    <label  id="price6">25000.00</label><br>
-                    </ul>
+                    <label for="price5">50000.00</label>
                     <input type="number" class="form-control" id="qty6" placeholder="Enter quantity">
                 </div>
             </div>
