--- a/index.html
+++ b/index.html
@@ -82,25 +82,25 @@
         <div class="row">
             <div class="col-md-4 d-flex">
                 <div class="product flex-fill">
-                    <label for="product1">James Jersey</label>   
+                    <label id="product1">James Jersey</label>   
                     <img src="james.png" class="img-thumbnail">
-                    <label for="price1">27000.00</label>
+                    <label id="price1">27000.00</label>
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity">
                 </div>
             </div>
             <div class="col-md-4 d-flex">
                 <div class="product flex-fill">
-                    <label for="product2">Bryant Jersey</label>   
+                    <label id="product2">Bryant Jersey</label>   
                     <img src="kobe.png" class="img-thumbnail">
-                    <label for="price2">37000.00</label>
+                    <label id="price2">37000.00</label>
                     <input type="number" class="form-control" id="qty2" placeholder="Enter quantity">
                 </div>
             </div>
             <div class="col-md-4 d-flex">
                 <div class="product flex-fill">
-                    <label for="product3">Iverson Jersey</label>   
+                    <label id="product3">Iverson Jersey</label>   
                     <img src="iverson.png" class="img-thumbnail">
-                    <label for="price3">47000.00</label>
+                    <label id="price3">47000.00</label>
                     <input type="number" class="form-control" id="qty3" placeholder="Enter quantity">
                 </div>
             </div>
@@ -108,25 +108,25 @@
         <div class="row">
             <div class="col-md-4 d-flex">
                 <div class="product flex-fill">
-                    <label for="product4">Irving Jersey</label>   
+                    <label id="product4">Irving Jersey</label>   
                     <img src="irving.png" class="img-thumbnail">
-                    <label for="price4">57000.00</label>
+                    <label id="price4">57000.00</label>
                     <input type="number" class="form-control" id="qty4" placeholder="Enter quantity">
                 </div>
             </div>
             <div class="col-md-4 d-flex">
                 <div class="product flex-fill">
-                    <label for="product5">Harden Jersey</label>   
+                    <label id="product5">Harden Jersey</label>   
                     <img src="harden.png" class="img-thumbnail">
-                    <label for="price5">67000.00</label>
+                    <label id="price5">67000.00</label>
                     <input type="number" class="form-control" id="qty5" placeholder="Enter quantity">
                 </div>
             </div>
             <div class="col-md-4 d-flex">
                 <div class="product flex-fill">
-                    <label for="product6">Jordan Jersey</label>   
+                    <label id="product6">Jordan Jersey</label>   
                     <img src="jordan.png" class="img-thumbnail">
-                    <label for="price5">50000.00</label>
+                    <label id="price6">50000.00</label>
                     <input type="number" class="form-control" id="qty6" placeholder="Enter quantity">
                 </div>
             </div>
