--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
         .header {
             text-align: center;
-            background-color: #28a745; /* Green background */
+            background-color: violet; /* Violet background */
             color: white;
             padding: 20px 0;
             position: relative;
@@ -23,7 +23,7 @@
         .header h2 {
             margin: 0;
             font-size: 2.5em;
-            background-color: #007bff; /* Blue background for text */
+            background-color: yellow; /* Yellow background for text */
             display: inline-block;
             padding: 0 20px;
             animation: slideIn 5s linear infinite;
@@ -75,8 +75,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h2>Jersey Shop</h2>
-            <p>By Jericho Dela Cruz</p>
+            <h2>JERSY'SHOP</h2>
+            <p>DELA CRUZ, JERICHO</p>
             <hr class="hr">
         </div>
         <div class="row">
