--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             background-color: yellow; /* Yellow background for text */
             display: inline-block;
             padding: 0 20px;
-            animation: slideIn 5s linear infinite;
+            animation: none;
         }
         @keyframes slideIn {
             0% {
