--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         .header h2 {
             margin: 0;
             font-size: 2.5em;
-            background-color: yellow; /* Yellow background for text */
+            background-color: Black; /* Yellow background for text */
             display: inline-block;
             padding: 0 20px;
             animation: none;
@@ -37,7 +37,7 @@
             }
         }
         .product {
-            background-color: #ffffff;
+            background-color: black;
             border: 1px solid #dee2e6;
             border-radius: 5px;
             padding: 15px;
