--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         .header h2 {
             margin: 0;
             font-size: 2.5em;
-            background-color: Black; /* Yellow background for text */
+            background-color: Black; /* Black background for text */
             display: inline-block;
             padding: 0 20px;
             animation: none;
@@ -77,6 +77,7 @@
         <div class="header">
             <h2>JERSY'SHOP</h2>
             <p>DELA CRUZ, JERICHO</p>
+            <p>BSIT 3-C</p>
             <hr class="hr">
         </div>
         <div class="row">
