--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         }
         .product:hover {
             transform: scale(1.05);
-            background-color: #f0f0f0;
+            background-color: black;
         }
         .product img {
             max-width: 100%;
@@ -75,7 +75,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h2>JERSY'SHOP</h2>
+            <h2>NBA JERSEY SHOP</h2>
             <p>DELA CRUZ, JERICHO</p>
             <p>BSIT 3-C</p>
             <hr class="hr">
