--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            background-color: #f8f9fa;
+            background-color: Blue;
         }
         .container {
             margin-top: 20px;
@@ -37,7 +37,7 @@
             }
         }
         .product {
-            background-color: black;
+            background-color: Green;
             border: 1px solid #dee2e6;
             border-radius: 5px;
             padding: 15px;
