--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         .header h2 {
             margin: 0;
             font-size: 2.5em;
-            background-color: Black; /* Black background for text */
+            background-color:Green; /* Green background for text */
             display: inline-block;
             padding: 0 20px;
             animation: none;
@@ -38,7 +38,7 @@
         }
         .product {
             background-color: Green;
-            border: 1px solid #dee2e6;
+            border: 1px solid violet;
             border-radius: 5px;
             padding: 15px;
             margin-bottom: 20px;
@@ -50,7 +50,7 @@
         }
         .product:hover {
             transform: scale(1.05);
-            background-color: black;
+            background-color: Violet;
         }
         .product img {
             max-width: 100%;
