--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             margin-bottom: 20px;
             text-align: center;
             display: flex;
+            animation: reverse;
             flex-direction: column;
             justify-content: space-between;
             flex: 1; /* Ensure equal width */
