--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             padding: 0 20px;
             animation: none;
         }
-        @keyframes slideIn {
-            0% {
-                transform: opacity 0.5;
-            }
-            100% {
-                transform: opacity 0.5;
-            }
+        @keyframes scaleAndSkew {
+    0% {
+        transform: scale(1) skew(0deg, 0deg);
+    }
+    100% {
+        transform: scale(1.5) skew(20deg, 20deg);
+    }
         }
         .product {
             background-color: Green;
