--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
         .header {
             text-align: center;
-            background-color: violet; /* Violet background */
+            background-color:Green; /* Violet background */
             color: white;
             padding: 20px 0;
             position: relative;
