--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 <body>
     <div class="container">
         <div class="header">
-            <h2>NBA JERSEY SHOP</h2>
-            <p>DELA CRUZ, JERICHO</p>
-            <p>BSIT 3-C</p>
+            <h2>NBA JERSEY STORE</h2>
+            <p>DELA CRUZ, JERICHO G.</p>
+            <h2>BSIT 3-C</h2>
             <hr class="hr">
         </div>
         <div class="row">
@@ -87,7 +87,7 @@
                 <div class="product flex-fill">
                     <label id="product1">James Jersey</label>   
                     <img src="james.png" class="img-thumbnail">
-                    <label id="price1">27000.00</label>
+                    <label id="price1">4000.00</label>
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity">
                 </div>
             </div>
@@ -95,7 +95,7 @@
                 <div class="product flex-fill">
                     <label id="product2">Bryant Jersey</label>   
                     <img src="kobe.png" class="img-thumbnail">
-                    <label id="price2">37000.00</label>
+                    <label id="price2">4000.00</label>
                     <input type="number" class="form-control" id="qty2" placeholder="Enter quantity">
                 </div>
             </div>
@@ -103,7 +103,7 @@
                 <div class="product flex-fill">
                     <label id="product3">Iverson Jersey</label>   
                     <img src="iverson.png" class="img-thumbnail">
-                    <label id="price3">47000.00</label>
+                    <label id="price3">5000.00</label>
                     <input type="number" class="form-control" id="qty3" placeholder="Enter quantity">
                 </div>
             </div>
@@ -113,7 +113,7 @@
                 <div class="product flex-fill">
                     <label id="product4">Irving Jersey</label>   
                     <img src="irving.png" class="img-thumbnail">
-                    <label id="price4">57000.00</label>
+                    <label id="price4">3500.00</label>
                     <input type="number" class="form-control" id="qty4" placeholder="Enter quantity">
                 </div>
             </div>
@@ -121,7 +121,7 @@
                 <div class="product flex-fill">
                     <label id="product5">Harden Jersey</label>   
                     <img src="harden.png" class="img-thumbnail">
-                    <label id="price5">67000.00</label>
+                    <label id="price5">2500.00</label>
                     <input type="number" class="form-control" id="qty5" placeholder="Enter quantity">
                 </div>
             </div>
@@ -129,7 +129,7 @@
                 <div class="product flex-fill">
                     <label id="product6">Jordan Jersey</label>   
                     <img src="jordan.png" class="img-thumbnail">
-                    <label id="price6">50000.00</label>
+                    <label id="price6">5000.00</label>
                     <input type="number" class="form-control" id="qty6" placeholder="Enter quantity">
                 </div>
             </div>
