--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            background-color: Blue;
+            background-color: white;
         }
         .container {
             margin-top: 20px;
@@ -52,7 +52,7 @@
         }
         .product:hover {
             transform: scale(1.05);
-            background-color: Violet;
+            background-color: Blue;
         }
         .product img {
             max-width: 100%;
@@ -79,7 +79,7 @@
         <div class="header">
             <h2>NBA JERSEY STORE</h2>
             <p>DELA CRUZ, JERICHO G.</p>
-            <h2>BSIT 3-C</h2>
+            <h3>BSIT 3-C</h3>
             <hr class="hr">
         </div>
         <div class="row">
